tests/haste_node_package_and_file/haste_node_package_and_file.exp
Error ----------------------------------------------------------------------------------------------------- test.js:17:2

Cannot cast `pkg` to empty because string [1] is incompatible with empty [2]. [incompatible-cast]

   test.js:17:2
   17| (pkg: empty); // error
        ^^^

References:
   package/index.js:3:16
    3| export default "string";
                      ^^^^^^^^ [1]
   test.js:17:7
   17| (pkg: empty); // error
             ^^^^^ [2]



Found 1 error
